--- a/src/MudBlazor/Components/Table/MudTablePager.razor
+++ b/src/MudBlazor/Components/Table/MudTablePager.razor
@@ -1,58 +1,60 @@
 @namespace MudBlazor
 @inherits MudComponentBase
 
-<MudToolBar @attributes="UserAttributes" Class="@Classname" Style="@Style">
-    @if (HorizontalAlignment == HorizontalAlignment.End ||
-   (HorizontalAlignment == HorizontalAlignment.Right && !RightToLeft) ||
-   (HorizontalAlignment == HorizontalAlignment.Left && RightToLeft) ||
-    HorizontalAlignment == HorizontalAlignment.Center)
-    {
-        <div class="mud-table-pagination-spacer"></div>
-    }
-    @if (!HideRowsPerPage)
-    {
-        <div class="@PaginationClassname">
-            <div class="mud-table-pagination-caption">
-                <div class="mud-table-pagination-information">@RowsPerPageString</div>
-            </div>
-            <CascadingValue Name="SubscribeToParentForm" Value="false" IsFixed>
+@if (!HideWhenSinglePage || Table.GetFilteredItemsCount() > Table.RowsPerPage)
+{
+    <MudToolBar @attributes="UserAttributes" Class="@Classname" Style="@Style">
+        @if (HorizontalAlignment == HorizontalAlignment.End ||
+       (HorizontalAlignment == HorizontalAlignment.Right && !RightToLeft) ||
+       (HorizontalAlignment == HorizontalAlignment.Left && RightToLeft) ||
+       HorizontalAlignment == HorizontalAlignment.Center)
+        {
+            <div class="mud-table-pagination-spacer"></div>
+        }
+        @if (!HideRowsPerPage)
+        {
+            <div class="@PaginationClassname">
+                <div class="mud-table-pagination-caption">
+                    <div class="mud-table-pagination-information">@RowsPerPageString</div>
+                </div>
+                <CascadingValue Name="SubscribeToParentForm" Value="false" IsFixed>
                 <MudSelect T="int" ValueChanged="SetRowsPerPage" Value="@(Table?.RowsPerPage ?? 0)" Class="mud-table-pagination-select" DisableUnderLine="true" Dense="true">
                     @foreach (int pageSize in PageSizeOptions)
-                    {
-                        if (pageSize == int.MaxValue)
                         {
-                            <MudSelectItem T="int" Value="@pageSize">@AllItemsText</MudSelectItem>
+                            if (pageSize == int.MaxValue)
+                            {
+                                <MudSelectItem T="int" Value="@pageSize">@AllItemsText</MudSelectItem>
+                            }
+                            else
+                            {
+                                <MudSelectItem T="int" Value="@pageSize">@pageSize.ToString().ToUpper()</MudSelectItem>
+                            }
                         }
-                        else
-                        {
-                            <MudSelectItem T="int" Value="@pageSize">@pageSize.ToString().ToUpper()</MudSelectItem>
-                        }
-                    }
-                </MudSelect>
-            </CascadingValue>
-        </div>
-    }
-    @if (!HidePageNumber)
-    {
-        <div class="mud-table-pagination-caption">
-            <div class="mud-table-page-number-information">@Info</div>
-        </div>
-    }
-    @if (!HidePagination)
-    {
-        <div class="@ActionsClassname">
-            <MudIconButton Class="mud-flip-x-rtl" Icon="@FirstIcon" Disabled="@BackButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.First))" aria-label="First page" />
-            <MudIconButton Class="mud-flip-x-rtl" Icon="@BeforeIcon" Disabled="@BackButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.Previous))" aria-label="Previous page" />
-            <MudIconButton Class="mud-flip-x-rtl" Icon="@NextIcon" Disabled="@ForwardButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.Next))" aria-label="Next page" />
-            <MudIconButton Class="mud-flip-x-rtl" Icon="@LastIcon" Disabled="@ForwardButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.Last))" aria-label="Last page" />
-        </div>
-    }
-    @if (HorizontalAlignment == HorizontalAlignment.Start ||
- (HorizontalAlignment == HorizontalAlignment.Left && !RightToLeft) ||
- (HorizontalAlignment == HorizontalAlignment.Right && RightToLeft) ||
-  HorizontalAlignment == HorizontalAlignment.Center)
-    {
-        <div class="mud-table-pagination-spacer"></div>
-    }
-</MudToolBar>
-
+                    </MudSelect>
+                </CascadingValue>
+            </div>
+        }
+        @if (!HidePageNumber)
+        {
+            <div class="mud-table-pagination-caption">
+                <div class="mud-table-page-number-information">@Info</div>
+            </div>
+        }
+        @if (!HidePagination)
+        {
+            <div class="@ActionsClassname">
+                <MudIconButton Class="mud-flip-x-rtl" Icon="@FirstIcon" Disabled="@BackButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.First))" aria-label="First page" />
+                <MudIconButton Class="mud-flip-x-rtl" Icon="@BeforeIcon" Disabled="@BackButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.Previous))" aria-label="Previous page" />
+                <MudIconButton Class="mud-flip-x-rtl" Icon="@NextIcon" Disabled="@ForwardButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.Next))" aria-label="Next page" />
+                <MudIconButton Class="mud-flip-x-rtl" Icon="@LastIcon" Disabled="@ForwardButtonsDisabled" @onclick="@(() => Table.NavigateTo(Page.Last))" aria-label="Last page" />
+            </div>
+        }
+        @if (HorizontalAlignment == HorizontalAlignment.Start ||
+       (HorizontalAlignment == HorizontalAlignment.Left && !RightToLeft) ||
+       (HorizontalAlignment == HorizontalAlignment.Right && RightToLeft) ||
+       HorizontalAlignment == HorizontalAlignment.Center)
+        {
+            <div class="mud-table-pagination-spacer"></div>
+        }
+    </MudToolBar>
+}
