--- a/src/MudBlazor.Docs/Pages/Components/Checkbox/Examples/CheckboxIndeterminateExample.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Checkbox/Examples/CheckboxIndeterminateExample.razor
@@ -4,9 +4,13 @@
     Value: @(value == null ? "null" : value.ToString())
 </MudCheckBox>
 <MudButton OnClick="@(()=>value=null)">Reset</MudButton>
-<MudCheckBox @bind-Checked="anotherValue" Color="@Color.Secondary" TriState="true">Checkbox with TriState. Value: @(anotherValue == null ? "null" : anotherValue.ToString())</MudCheckBox>
+<MudCheckBox @bind-Checked="anotherValue" Color="@Color.Secondary" TriState="true" ReverseTriState=_reversedCycle>Checkbox with TriState. Value: @(anotherValue == null ? "null" : anotherValue.ToString())</MudCheckBox>
+
+<MudSwitch Label="Reversed values cycle" @bind-Checked=_reversedCycle />
 
 @code {
+    private bool _reversedCycle;
+
     public bool? value { get; set; } = null;
     public bool? anotherValue { get; set;} = null;
 }
